Finished most of the `dyn` stuff, as well as the `alloc`-feature gating & cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,21 +17,31 @@ repository = "https://github.com/danielhenrymantilla/lending-iterator.rs"
 documentation = "https://docs.rs/lending-iterator"
 readme = "README.md"
 
+rust-version = "1.57.0"
+
 # description = "…"
 # keywords = []
 
 [features]
-better-docs = []  # allowed to break MSRV
+default = [
+    "alloc",
+]
+
+alloc = []
+
+better-docs = [ # allowed to break MSRV
+    "macro-vis",
+]
 ui-tests = ["better-docs"]
 
 [dependencies]
-higher-order-closure.version = "0.0.5"
 macro_rules_attribute.version = "0.1.2"
 nougat.version = "0.2.0-rc2"
-polonius-the-crab.version = "0.2.1"
 never-say-never = "6.6.666"
-paste = "1.0.7"
+polonius-the-crab.version = "0.2.1"
 
+macro-vis.optional = true
+macro-vis.version = "0.1.1"
 
 [dependencies.lending-iterator-proc_macros]
 path = "src/proc_macros"
@@ -50,4 +60,5 @@ features = [
 ]
 rustdoc-args = [
     "--html-before-content", "fix-docsrs-li-details-summary.html",
+    "--cfg", "doc_nightly",
 ]
