--- a/.cargo/config
+++ b/.cargo/config
@@ -1,3 +1,3 @@
 # Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
 [alias]
-test-ui = ["test", "--doc", "--features", "ui-tests", "--", "--nocapture", "--test-threads", "1"]
+test-ui = ["test", "--doc", "--features", "better-docs,ui-tests", "--", "--nocapture", "--test-threads", "1"]
