--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -86,17 +86,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check]
     steps:
-        - name: Install Rust toolchain
-          uses: actions-rs/toolchain@v1
-          with:
-            profile: default
-            override: true
-            toolchain: stable
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: default
+          override: true
+          toolchain: stable
 
-        - name: Clone repo
-          uses: actions/checkout@v2
+      - name: Clone repo
+        uses: actions/checkout@v2
 
-        - name: Cargo UI test
-          uses: actions-rs/cargo@v1
-          with:
-            command: test-ui
+      - name: Cargo UI test
+        uses: actions-rs/cargo@v1
+        env:
+          RUSTC_BOOTSTRAP: 1
+        with:
+          command: test-ui
