--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 # Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
-
 [lib]
-name = "lending_iterator"
 path = "src/_lib.rs"
 
 [package]
@@ -32,11 +30,14 @@ alloc = []
 better-docs = [ # allowed to break MSRV
     "macro-vis",
 ]
-ui-tests = ["better-docs"]
+
+ui-tests = [
+    "better-docs",
+]
 
 [dependencies]
 macro_rules_attribute.version = "0.1.2"
-nougat.version = "0.2.0-rc2"
+nougat.version = "0.2.0"
 never-say-never = "6.6.666"
 polonius-the-crab.version = "0.2.1"
 
