--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ name = "lending-iterator"
 authors = [
     "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
 ]
-version = "0.1.7-rc1"  # Keep in sync
+version = "0.1.7"  # Keep in sync
 edition = "2021"
 
 license = "Zlib OR MIT OR Apache-2.0"
@@ -58,7 +58,7 @@ macro-vis.version = "0.1.1"
 
 [dependencies.lending-iterator-proc_macros]
 path = "src/proc_macros"
-version = "0.1.7-rc1"  # Keep in sync
+version = "0.1.7"  # Keep in sync
 
 [dev-dependencies]
 lending-iterator.path = "."
